--- a/src/App.css
+++ b/src/App.css
@@ -164,6 +164,7 @@ a:hover{
   justify-content: space-between;
   align-items: center;
   gap: 40px;
+  margin-top: 50px;
 }
 
 .stats-container h2{
